# stan

./: Cargo.toml  README.md
inventory/: Cargo.toml  README.md
inventory/src/: lib.rs
inventory/wit/: inventory.wit
manufacturing/: Cargo.toml  README.md
manufacturing/src/: lib.rs  routing.rs
manufacturing/wit/: manufacturing.wit
material/: Cargo.toml  README.md
material/src/: lib.rs
material/wit/: material.wit
order/: Cargo.toml  README.md
order/src/: lib.rs  worker.rs
order/wit/: order.wit
product/: Cargo.toml  README.md
product/src/: lib.rs
product/wit/: product.wit
routing/: Cargo.toml  README.md
routing/src/: lib.rs
routing/wit/: routing.wit
wit/: stan.wit
workers/customer/: Cargo.toml  README.md
workers/customer/src/: lib.rs
workers/customer/wit/: customer.wit
workers/inventory/: Cargo.toml  README.md
workers/inventory/src/: lib.rs
workers/inventory/wit/: inventory.wit
workers/manufacturing/: Cargo.toml  README.md
workers/manufacturing/src/: lib.rs
workers/manufacturing/wit/: manufacturing.wit
workers/material/: Cargo.toml  README.md
workers/material/src/: lib.rs
workers/material/wit/: material.wit
workers/order/: Cargo.toml  README.md
workers/order/src/: lib.rs
workers/order/wit/: order.wit
workers/product/: Cargo.toml  README.md
workers/product/src/: lib.rs
workers/product/wit/: product.wit
workers/routing/: Cargo.toml  README.md
workers/routing/src/: lib.rs
workers/routing/wit/: routing.wit
