[workspace]
members = [
  "workers/inventory",
  "workers/manufacturing",
  "workers/material",
  "workers/order",
  "workers/product",
  "workers/routing",
]

[workspace.package]
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
cargo-component-bindings = "0.4.1"
once_cell = "1.17.1"

[package]
name = "cli"
version = { workspace = true }
edition = { workspace = true }
