[package]
name = "material"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.17.1"
cargo-component-bindings = "0.4.1"

[package.metadata.component]
package = "golem:material"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.dependencies]