[package]
name = "manufacturing"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
cargo-component-bindings = { workspace = true }

[package.metadata.component]
package = "golem:manufacturing"

[package.metadata.component.target.dependencies]
