[package]
name = "material"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
once_cell = { workspace = true }
cargo-component-bindings = { workspace = true }

[package.metadata.component]
package = "golem:material"

[package.metadata.component.dependencies]