[package]
name = "order"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
cargo-component-bindings = { workspace = true }

[package.metadata.component]
package = "golem:order"

[package.metadata.component.target.dependencies]
"golem:inventory" = { path = "../inventory/wit" }
