[package]
name = "order"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
cargo-component-bindings = { workspace = true }

[package.metadata.component]
package = "stan:order"

[package.metadata.component.target.dependencies]
"stan:customer" = { path = "../customer/wit" }
"stan:inventory" = { path = "../inventory/wit" }
